Improvements & Fixes to the Sign In Page
- Align with actual Sign In mockups;
- Disable "Sign In" button on lack of user or password;
- Allow to login by pressing enter key;
- Stop footer from overlapping sign in form with no scroll option;
- Other misc fixes...

--- a/src/main/webapp/resources/css/olympus.css
+++ b/src/main/webapp/resources/css/olympus.css
@@ -1,3 +1,4 @@
+/*
 @font-face{
   font-family: 'Lato';
   src: url('../fonts/Lato-Regular.eot');
@@ -6,8 +7,9 @@
   url('../fonts/Lato-Regular.ttf') format('truetype'),
   url('../fonts/Lato-Regular.svg#webfont') format('svg');
 }
+*/
 
-html, body {
+.loggedIn {
   height: 100%;
   overflow-y: hidden;
 }
@@ -19,29 +21,25 @@ html, body {
   outline: none;
   font-family: lato;
 }
+
 body {
   background: #f2f1f1 !important;
 }
-.new-container {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  padding-top: -20px
-}
-.margin-top {
-  margin-top: 800;
+
+.login {
+  overflow-y: auto;
+  height: auto;
 }
 
-#registration {
-    display: flex;
-    height: 100%;
+#content {
+  display: flex;
+  height: 100%;
 }
 
 #footer {
   background:#4a4a4b;
   width:100%;
-  height:100px;
+  height:85px;
   position:absolute;
   bottom:0;
   left:0;
@@ -54,13 +52,13 @@ body {
 
 .telestax-rights {
   color: #a7a7a7;
-  font-size: 1.35em;
+  font-size: 1.0em;
   text-align: center;
 }
 
 .login-form {
   max-width: 400px;
-  margin: 0 auto;
+  margin-top: 150px;
 }
 
 form[role=login] {
@@ -121,7 +119,7 @@ form[role=login] input {
   border: none;
   padding-left: 40px;
   border: 1px solid #d1d1d1;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 
 }
 
@@ -141,24 +139,24 @@ form[role=login] input::-webkit-input-placeholder {
 form[role=login] input:-moz-placeholder {
   color: #c1c4c5;
 }
-form[role=login] input::-moz-placeholder {
+form[role=login] input:-moz-placeholder {
   color: #c1c4c5;
 }
 form[role=login] input:-ms-input-placeholder {
   color: #c1c4c5;
 }
+
 form[role=login] button {
   line-height: 30px;
   font-weight: normal;
-  -webkit-box-shadow: 0px 3px 0px 0px #c7c7c;
-  -moz-box-shadow: 0px 3px 0px 0px rgba(24, 121, 158, 1);
-  box-shadow: 1px 3px 0px 0px #c7c7c7;
-  background: #d1d1d1;
-  border: none;
+
+  background: #f2f1f1;
+  border: 2px solid#44a5ab;
+
 }
 
 .change-color {
-  color: #6d6e70;
+  color: #44a5ab;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
@@ -172,15 +170,16 @@ form[role=login] button {
 }
 
 .restcomm-logo {
-  margin-top: 100px;
+  margin-top: 75px;
   margin-left: 150px;
 }
-form[role=login] button:hover {
-  background: #c7c7c7;
+form[role=login] button:enabled:hover {
+  color: #edf7f8;
+  background: #44a5ab;
 }
 
 .login-form .form-control {
-  padding-left: 40px;
+  padding-left: 10px;
 }
 .login-form .form-control + .glyphicon {
   position: absolute;
